--- a/app/templates/doctor/patient/patient.html
+++ b/app/templates/doctor/patient/patient.html
@@ -120,7 +120,7 @@
                     <h1 class="modal-title fs-5">Delete Record</h1>
                 </div>
                 <div class="modal-body">
-                    Are you sure you want to delete this record?
+                    Are you sure you want to permanently delete the patient record?
                 </div>
                 <div class="modal-footer">
                     <button id="confirmDelete" class="btn-done">CONFIRM</button>
