--- a/app/templates/receptionist/dashboard.html
+++ b/app/templates/receptionist/dashboard.html
@@ -70,6 +70,7 @@
     </main>
 
     <script>
+        // TO DISPLAY THE DATE
         function displayDateAndTime() {
         const demoElement = document.getElementById('demo');
 
@@ -77,14 +78,12 @@
                 const currentDateAndTime = new Date();
                 const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
                 const formattedDateAndTime = currentDateAndTime.toLocaleDateString(undefined, options);
-                const currentTime = currentDateAndTime.toLocaleTimeString();
 
-                demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}<br>${currentTime}`;
+                demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}`;
             }
             updateDateAndTime();
-            setInterval(updateDateAndTime, 1000);
+            setInterval(updateDateAndTime);
         }
-
         displayDateAndTime();   
     </script>
     
