--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -2,9 +2,9 @@
     --blueA: #0277BD; 
     --blueB: #A3D5FF;
     --blueC: #DFF1FF;
-    --blueD: #007bff; /* Active (button, text, background) */
-    --grayA: #6c757d;  /* Disabled Text */
-    --grayB: #e9ecef; /* Disabled Background */
+    --blueD: #007BFF; /* Active (button, text, background) */
+    --grayA: #6C757D;  /* Disabled Text */
+    --grayB: #E9ECEF; /* Disabled Background */
 }
 
 *,
@@ -94,7 +94,7 @@
     opacity: 0;
     visibility: hidden;
     transform: translateY(-50%);
-    top: 15px;
+    top: 18px;
     left: 35px;
     padding: 10px;
     border-radius: 10px;
@@ -114,19 +114,16 @@
     z-index: -1;
 }
 
-.selected-icon-bg p::after {
-    background-color: white;
-}
-
 .icon-bg p::after, .logout p::after {
     left: -6px;
     top: 5px;
 }
 
 .icon-bg:hover p, .logout:hover p {
-    left: 30px;
+    left: 25px;
     opacity: 1;
     visibility: visible;
+    z-index: 99;
 }
 
 ul {
@@ -165,16 +162,16 @@ ul li p {
     font-size: 12px;
     display: flex;
     align-items: center;
-    height: 65px; 
+    height: 60px; 
     background-color: white;
-    border-radius: 350px; 
+    border-radius: 360px; 
     overflow: hidden;
     margin-bottom: 25px;
 }
 
 .sidenav-user-bg:hover {
     display: flex;
-    width: 249px;
+    width: 200px;
 }
 
 .sidenav-user-bg div {
@@ -187,9 +184,9 @@ ul li p {
 }
 
 .user-img {
-    width: 55px;
+    width: 50px;
     border-radius: 100%;
-    margin-left: 5px;
+    margin-left: 7px;
 }
 
 /* -------------------------------------------- DASHBOARD -------------------------------------------- */
@@ -197,7 +194,7 @@ ul li p {
     font-weight: 900;
     position: absolute;
     display: flex;
-    top: 60px;
+    top: 70px;
     left: 1140px;
 }
 
