--- a/app/static/doctor_style.css
+++ b/app/static/doctor_style.css
@@ -21,10 +21,9 @@
 }
 
 .update-icon {
-    top: 130px;
-    width: 55px;
-    left: 1400px;
-    border-radius: 100%;
+    top: 43px;
+    width: 45px;
+    left: 1453px;
     z-index: 1;
     position: fixed;
     cursor: pointer;
@@ -37,15 +36,14 @@
 /* -------------------------------------------- BACK ICON -------------------------------------------- */
 .back-icon img {
     position: absolute;
-    width: 25px;
+    width: 20px;
     z-index: 1;
-    top: 55px;
+    top: 60px;
     left: 145px;
 }
 
 .back-icon img:active {
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
-    transform: translateY(2px);
+    transform: translateX(2px);
 }
 
 /* -------------------------------------------- PATIENT DETAILS NAVBAR -------------------------------------------- */
@@ -78,7 +76,7 @@
 .patient-bg {
     position: absolute;
     width: 1230px;  
-    height: 100%; 
+    height: 610px; 
     background-color: white;
     box-shadow: 10px 10px 20px 10px var(--blueC);
     top: 85px;
@@ -110,7 +108,7 @@
     width: 100px;
 }
 
-/* Dropdown styles */
+/* dropdown styles */
 input, select {
     padding: 10px;
     border: 2px solid var(--blueB);
@@ -151,7 +149,7 @@ input, select {
     gap: 55px;
 }
 
-/* -------------------------------------------- MEDICAL HISTORY, ASSESSMENT, LAB REQUEST, PRESCRIPTION BACKGROUNDS -------------------------------------------- */
+/* -------------------------------------------- MEDICAL HISTORY, ASSESSMENT, LAB REQUEST, PRESCRIPTION AND REPORT BACKGROUNDS -------------------------------------------- */
 .patient-bg.history {
     width: 1230px;  
     height: 2650px; 
@@ -243,10 +241,10 @@ input, select {
 }
 
 .med-header.prescription {
-    top: 390px;
+    top: 330px;
 }
 
-/* Sub messages */
+/* subheading */
 .subtext {
     position: relative;
     top: 95px;
@@ -254,7 +252,7 @@ input, select {
     font-size: 14px;
 }
 
-/* Checkboxes */
+/* checkboxes */
 .checkbox {
     display: flex;
     gap: 5px;
@@ -262,7 +260,7 @@ input, select {
     font-size: 17px;
 }
 
-/* More row arrangements */
+/* more row arrangements */
 .p_row.immunize {
     gap: 20px;
     margin-top: 165px;
@@ -319,17 +317,17 @@ input, select {
     margin-top: 160px;
 }
 
-/* Input box for past history */
+/* input box for past history */
 .inputBox.p_history {
     width: 270px;
 }
 
-/* Input box for the date, the condition started */
+/* input box for the date, the condition started */
 .inputBox.h_date {
     width: 165px;
 }
 
-/* Dropdown for social history */
+/* dropdown for social history */
 .historyA {
     width: 120px;
 }
@@ -394,7 +392,7 @@ input, select {
     font-size: 16px;
 }
 
-/* Text area */
+/* text area */
 .complaints textarea {
     width: 1000px;
     height: 200px;
@@ -410,7 +408,7 @@ input, select {
     outline: none;
 }
 
-/* Assessment rows */
+/* assessment rows */
 .p_row.vitalRowA {
     gap: 19px;
     margin-top: 160px;
@@ -487,7 +485,7 @@ input, select {
     width: 553px;
 }
 
-/* Assessment header */
+/* assessment header */
 .med-header.Q {
     top: 520px;
 }
@@ -553,7 +551,7 @@ input, select {
     position: relative;
 }
 
-/* Prescription rows */
+/* prescription rows */
 .columnA {
     position: absolute;
     top: 190px;
@@ -614,7 +612,7 @@ input, select {
 }
 
 .prescription-container {
-    margin-top: 230px;
+    margin-top: 160px;
 }
 
 .btn-prescription {
@@ -706,7 +704,7 @@ input, select {
 }
 
 /* -------------------------------------------- LABORATORY TEST REQUEST -------------------------------------------- */
-/* Lab results rows */
+/* lab results rows */
 .p_row.rowOne {
     gap: 30px;
     margin-top: 160px;
@@ -727,7 +725,7 @@ input, select {
     margin-top: 40px;
 }
 
-/* Lab results text area */
+/* lab results text area */
 .labTest textarea {
     width: 1000px;
     height: 250px;
@@ -828,8 +826,6 @@ input, select {
 .med-header.labReport {
     top: 1510px
 }
-
-
 
 /* APPOINTMENT */
 /* style here */
