Modified some parts

--- a/app/templates/receptionist/appointment/appointment.html
+++ b/app/templates/receptionist/appointment/appointment.html
@@ -54,7 +54,7 @@
                                         <td> {{ row[1] }} </td>
                                         <td> {{ row[2] }} </td>
                                         <td> 
-                                            <p class="status pending">
+                                            <p class="status done">
                                                 <strong> {{ row[3] }} </strong>
                                             </p>
                                         </td>
