--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -154,6 +154,89 @@ ul li p {
     margin-left: 5px;
 }
 
+
+
+/* SIDEBAR LOGOUT */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 500px; 
+    height: 220px; 
+    background-color: #fff;
+    border-radius: 12px;
+    margin: auto; 
+    margin-top: 10%; 
+    padding: 10px;
+}
+  
+.modal-header {
+    padding: 10px;
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.modal-body {
+    padding: 20px;
+    text-align: center;
+    font-size: 16px;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+  
+.modal-title {
+    margin: 0;
+}
+
+.modal.show {
+    display: block;
+}
+
+/* modal confirmation button */
+.btn-done {
+    color: white;
+    background-color: var(--blueA);
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn-done:active {
+    transform: translateY(1px);
+}
+
+.btn-done.cancel {
+    background-color: var(--blueA);;
+    color: white;
+}
+
+
 /* DASHBOARD */
 .date-time {
     font-weight: 900;
