--- a/app/templates/receptionist/dashboard.html
+++ b/app/templates/receptionist/dashboard.html
@@ -40,12 +40,10 @@
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('receptionist.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
     <main>
