--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -73,7 +73,9 @@
 }
 
 .icon-bg:hover {
-    transition: 0.3s;
+    transition: 0.5s;
+    background-color: white;
+    border-radius: 100%;
 }
 
 /* selected icon */
@@ -81,8 +83,8 @@
     width: 100%;  
     height: 62px; 
     background-color: white; 
-    border-radius: 20px; 
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); 
+    border-radius: 100%; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
     padding: 4px;
 }
 
@@ -95,7 +97,7 @@
     visibility: hidden;
     transform: translateY(-50%);
     top: 18px;
-    left: 35px;
+    left: 50px;
     padding: 10px;
     border-radius: 10px;
     background-color: var(--darkBlue);
@@ -120,7 +122,7 @@
 }
 
 .icon-bg:hover p, .logout:hover p, .selected-icon-bg:hover p {
-    left: 25px;
+    left: 35px;
     opacity: 1;
     visibility: visible;
     z-index: 99;
@@ -156,6 +158,13 @@ ul li p {
     white-space: nowrap;
     display: none;
 }
+/* 
+.border-line {
+    border: 1px solid var(--darkBlue);
+    position: absolute;
+    width: 65px;
+    margin-top: 180px;
+} */
 
 /* -------------------------------------------- SIDEBAR USER -------------------------------------------- */
 .sidenav-user-bg {
@@ -247,7 +256,7 @@ ul li p {
     color: white; 
     border: none;
     padding: 8px 16px;
-    border-radius: 4px; 
+    border-radius: 5px; 
     cursor: pointer; 
     font-size: 15px;
 }
