Modified the logout routes in the HTML files.

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -31,7 +31,7 @@
         </div>
             
         <div class="container margin-t">
-            <button type="submit" class="login-button" name="login-button" id="login-button">Log In</button>
+            <button type="submit" class="login-button" name="login-button" id="login-button">LOG IN</button>
         </div>
 
     </form>
@@ -41,5 +41,4 @@
         <span class="app-info" >Copyright © 2023 by DocCare All rights reserved.</span>
     </div>
     
-
 {% endblock %}
