--- a/app/templates/medtech/laboratory_test.html
+++ b/app/templates/medtech/laboratory_test.html
@@ -9,7 +9,7 @@
 
     <div class="sidenav-bg">
         <div class="cms-logo">
-            <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
+            <img src="{{ url_for('static', filename='images/DocCare Logo.png') }}">
         </div>
         <ul>
             <li class="selected-icon-bg">
@@ -37,12 +37,10 @@
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('medtech.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
+            <li class="logout" id="logoutButton">
+                <img src="{{ url_for('static', filename='images/Logout.png') }}">
+                <p>Logout</p>
+            </li>
         </ul>
     </div>
 
@@ -53,7 +51,7 @@
 
     <ul class="nav nav-underline">
         <li class="nav-item">
-        <a class="nav-link active" aria-current="page">LABORATORY REPORT</a>
+            <a class="nav-link active" aria-current="page">LABORATORY REPORT</a>
         </li>
     </ul>
 
