--- a/app/static/login_style.css
+++ b/app/static/login_style.css
@@ -94,12 +94,12 @@ body {
     width: 338px;
     height: 45px;
     flex-shrink: 0;
-    /* border-radius: 11px; */
+    border-radius: 11px;
     background-color: white;
-    border-bottom: 2px solid var(--blueA) !important;
-    border: var(--blueC);
-    /* border: 3px solid #DFF1FF; */
-    /* background: #FFF; */
+    /* border-bottom: 2px solid var(--blueA) !important;
+    border: var(--blueC); */
+    border: 2px solid var(--blueB);
+    background: #FFF;
     padding: 8px;
     box-sizing: border-box;
 }
@@ -107,8 +107,9 @@ body {
 .form-input:active,
 .form-input:focus {
     outline: none; 
-    border-bottom: 2px solid var(--blueA); 
-    box-shadow: 0 4px 6px -1px rgba(163, 213, 255, 1);
+    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1) 
+    /* border-bottom: 2px solid var(--blueA);  */
+    /* box-shadow: 0 4px 6px -1px rgba(163, 213, 255, 1); */
 }
 
 .form-group {
